--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                 const buttonText = isWatched ? '✓ Watched' : 'Mark Watched';
 
                 return `
-                    <div class="video-card ${watchedClass}" data-id="${video.id}" data-video-url="${video.videoUrl}">
-                        <a href="${video.videoUrl}" target="_blank" rel="noopener noreferrer" class="block group">
+                    <div class="video-card ${watchedClass}" data-id="${video.id}">
+                        <a href="${video.url}" target="_blank" rel="noopener noreferrer" class="block group">
                             <div class="overflow-hidden rounded-t-lg">
                                 <img src="${video.displayUrl}" alt="${video.caption}" class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1a1a1a/ffffff?text=Video';">
                             </div>
