--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koerner's Genius Ideas Dashboard</title>
+    <title>Ideas Dashboard</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Particles.js for background effects -->
@@ -191,7 +191,7 @@
     <div class="content-wrapper container mx-auto p-4 md:p-8 max-w-7xl">
         <!-- Header -->
         <header class="text-center mb-12 pt-8 sm:pt-16">
-            <h1 class="text-4xl md:text-6xl font-bold">Genius Ideas Dashboard</h1>
+            <h1 class="text-4xl md:text-6xl font-bold">The Business Ideas Dashboard</h1>
             <p class="text-lg mt-2" style="color: var(--text-muted);">Your personal tracker for Koerner's content.</p>
         </header>
 
