--- a/index.html
+++ b/index.html
@@ -285,12 +285,12 @@
                 const watchedClass = isWatched ? 'watched' : '';
                 const buttonText = isWatched ? '✓ Watched' : 'Mark Watched';
 
-                // *** CHANGE: Changed video.displayUrl to video.imageUrl ***
+                // *** CHANGE: Using video.displayUrl based on your JSON sample ***
                 return `
                     <div class="video-card ${watchedClass}" data-id="${video.id}">
                         <a href="${video.url}" target="_blank" rel="noopener noreferrer" class="block group">
                             <div class="overflow-hidden rounded-t-lg">
-                                <img src="${video.imageUrl}" alt="${video.caption}" class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1a1a1a/ffffff?text=Video';">
+                                <img src="${video.displayUrl}" alt="${video.caption}" class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1a1a1a/ffffff?text=Video';">
                             </div>
                             <div class="p-6 flex flex-col flex-grow">
                                 <h3 class="text-lg font-bold highlight h-14 overflow-hidden">${video.caption}</h3>
